syntax = "proto3";
package health;
option go_package = "github.com/cloudogu/k8s-ces-control/generated/health";

// The DoguHealth service provides endpoints to retrieve health information for installed dogus.
service DoguHealth {
  rpc GetByName(DoguHealthRequest) returns (DoguHealthResponse);
  rpc GetByNames(DoguHealthListRequest) returns (DoguHealthMapResponse);
  rpc GetAll(DoguHealthAllRequest) returns (DoguHealthMapResponse);
}

// DoguHealthRequest contains the name of dogu whose health check information should be retrieved.
message DoguHealthRequest {
  // dogu_name contains the name of the dogu for which the health checks should be executed.
  string dogu_name = 1;
}

// DoguHealthListRequest contains the data which are used to retrieve health information about all dogus.
message DoguHealthAllRequest {}

// DoguHealthListRequest contains the data which are used to retrieve health information about specific dogus.
message DoguHealthListRequest {
  repeated string dogus = 1;
}

message DoguHealthCheck {
  // type specifies the check type.
  string type = 1;
  // success indicates if the check was successful.
  bool success = 2;
  // message contains the error message if the check failed.
  string message = 3;
  // critical indicates that the dogu is out of order due to a failed check.
  bool critical = 4;
}

// DoguHealthResponse contains health information about a specific dogu and the status of the services answer.
message DoguHealthResponse {
  // full_name contains the name of the dogu whose health information was retrieved including the namespace.
  string full_name = 1;
  // short_name contains the dogu name without namespace.
  string short_name = 2;
  // display_name contains the name which will be displayed in the UI.
  string display_name = 3;
  // healthy indicates if all health checks passed successfully.
  bool healthy = 4;
  // data provides access to the health check results of the requested dogu.
  repeated DoguHealthCheck results = 5;
}

// DoguHealthListResponse contains health information about the all installed dogus and the status of the services answer.
message DoguHealthMapResponse {
  // all_healthy indicates if all installed dogus have passed the available checks successfully.
  bool all_healthy = 1;
  // data provides access to the health check results of all installed dogus
  // it can be accessed via the dogu name as key
  map<string, DoguHealthResponse> results = 2;
}
